--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "style-dictionary": "^3.0.0-rc.8",
     "svg2vectordrawable": "^2.6.26",
     "tinycolor2": "^1.4.2"
+  },
+  "dependencies": {
+    "token-transformer": "^0.0.27"
   }
 }
