--- a/.github/workflows/create-tokens.yml
+++ b/.github/workflows/create-tokens.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/setup-node@v2.4.0
       # Install dependencies
       - run: npm install
-      # Transform Figma Tokens JSON to something Style Dictionary can read, run Style Dictionary and later run Tailwind
+      # Transform Figma Tokens JSON to something Style Dictionary can read, run Style Dictionary
       - run: npm run build
       # Add files that were created during a run, e.g. created files from style dictionary or token-transformer.
       - uses: stefanzweifel/git-auto-commit-action@v4
