--- a/.github/workflows/create-tokens.yml
+++ b/.github/workflows/create-tokens.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.4.0
       # Install dependencies
-      - run: npm install
+      - run: npm ci
       # Transform Figma Tokens JSON to something Style Dictionary can read, run Style Dictionary
       - run: npm run build
       # Add files that were created during a run, e.g. created files from style dictionary or token-transformer.
