--- a/android/styledictionary/src/main/AndroidManifest.xml
+++ b/android/styledictionary/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dbanksdesign.styledictionarydarkmode">
+    package="com.teamwork.mobile-design-system">
 </manifest>
