--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "fs-extra": "^9.1.0",
     "lodash": "^4.17.21",
     "sharp": "^0.30.5",
-    "style-dictionary": "^3.0.0-rc.8",
+    "style-dictionary": "3.7.1",
     "svg2vectordrawable": "^2.9.1",
     "tinycolor2": "^1.4.2"
   },
