--- a/.github/workflows/create-tokens.yml
+++ b/.github/workflows/create-tokens.yml
@@ -17,10 +17,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: main
+          ref: master
           token: ${{ env.GH_TOKEN }}
 
-      - name: ⚙ changelog
+      - name: ⚙ Generate Mobile files
         uses: faberNovel/github-changelog-generator-action@master
         with:
           options: --token ${{ secrets.GITHUB_TOKEN }} --o changelog.md
