Android: Fix compilation and update light token typo

--- a/android/styledictionary/dependencies.gradle
+++ b/android/styledictionary/dependencies.gradle
@@ -1,4 +1,4 @@
-Constants Gradle file to use for dependencies versions (and related properties)
+// Constants Gradle file to use for dependencies versions (and related properties)
 
 ext {
 
