--- a/android/styledictionary/app/build.gradle
+++ b/android/styledictionary/app/build.gradle
@@ -41,7 +41,7 @@ android {
 }
 
 dependencies {
-    implementation project(":design-system")
+    implementation project(":teamwork-design-system")
 
     debugApi "androidx.compose.ui:ui-tooling:1.3.0"
     api "androidx.compose.ui:ui:1.3.0"
