--- a/.github/workflows/create-tokens.yml
+++ b/.github/workflows/create-tokens.yml
@@ -7,13 +7,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Node.js environment
+      - name: 🤘 Setup Node.js environment
         uses: actions/setup-node@v2.4.0
       # Install dependencies
-      - run: npm ci
+      - name: ⚙️ Install dependencies
+        run: npm ci
       # Transform Figma Tokens JSON to something Style Dictionary can read, run Style Dictionary
-      - run: npm run build
+      - name: ⚙️ Transform Figma Tokens
+        run: npm run build
       # Add files that were created during a run, e.g. created files from style dictionary or token-transformer.
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - name: 🎉 Autocommit generated files
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: 📚 Updated files generated 
