--- a/android/styledictionary/app/build.gradle
+++ b/android/styledictionary/app/build.gradle
@@ -3,14 +3,18 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+apply from: "../dependencies.gradle"
+
 android {
     namespace 'com.teamwork.mobile.design'
-    compileSdk 33
+    compileSdk project.ext.sharedCompileSdkVersion
 
     defaultConfig {
         applicationId "com.teamwork.mobile.design"
-        minSdk 23
-        targetSdk 33
+
+        minSdk sharedMinSdkVersion
+        targetSdk sharedTargetSdkVersion
+
         versionCode 1
         versionName "1.0"
 
@@ -43,18 +47,19 @@ android {
 dependencies {
     implementation project(":teamwork-design-system")
 
-    debugApi "androidx.compose.ui:ui-tooling:1.3.0"
-    api "androidx.compose.ui:ui:1.3.0"
-    api "androidx.compose.ui:ui-tooling-preview:1.3.0"
+    debugApi "androidx.compose.ui:ui-tooling:${versions.androidx.compose}"
+    api "androidx.compose.ui:ui:${versions.androidx.compose}"
+    api "androidx.compose.ui:ui-tooling-preview:${versions.androidx.compose}"
 
     // Material TODO update when using Kotlin 1.7.* #20279933
-    api "androidx.compose.material3:material3:1.0.0"
+    api "androidx.compose.material3:material3:${versions.androidx.composeMaterial3}"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation "androidx.activity:activity-compose:1.6.1"
-    implementation 'com.google.android.material:material:1.6.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.core:core-ktx:${versions.androidx.core}"
+    implementation "androidx.appcompat:appcompat:${versions.androidx.appCompat}"
+    implementation "androidx.activity:activity-compose:${versions.androidx.activity}"
+    implementation "com.google.android.material:material:${versions.androidx.material}"
+
+    testImplementation "junit:junit:${versions.junit}"
+
+    androidTestImplementation "androidx.test.ext:junit:${versions.androidx.testExt}"
 }
