--- a/android/styledictionary/teamwork-design-system/build.gradle
+++ b/android/styledictionary/teamwork-design-system/build.gradle
@@ -46,20 +46,21 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion "1.3.0"
+        kotlinCompilerExtensionVersion versions.androidx.composeCompiler
     }
 }
 
 dependencies {
-    // Compose TODO update when using Kotlin 1.7.* #20279933
+    // Compose
     debugApi "androidx.compose.ui:ui-tooling:${versions.androidx.compose}"
     api "androidx.compose.ui:ui:${versions.androidx.compose}"
     api "androidx.compose.ui:ui-tooling-preview:${versions.androidx.compose}"
 
-    // Material TODO update when using Kotlin 1.7.* #20279933
+    // Material
     api "com.google.android.material:material:${versions.androidx.material}"
     api "androidx.compose.material3:material3:${versions.androidx.composeMaterial3}"
 
+    implementation "androidx.annotation:annotation:${versions.androidx.annotation}"
     implementation "androidx.core:core-ktx:${versions.androidx.core}"
     implementation "androidx.appcompat:appcompat:${versions.androidx.appCompat}"
     implementation "androidx.activity:activity-compose:${versions.androidx.activity}"
