--- a/android/styledictionary/build.gradle
+++ b/android/styledictionary/build.gradle
@@ -1,8 +1,7 @@
 buildscript {
      ext.versions = [
              // Check Compose version is compatible before updating Kotlin version (they need to match)
-             // TODO #20279934 update to Kotlin 1.7.*
-             kotlin   : '1.6.21', // https://github.com/JetBrains/kotlin/blob/master/ChangeLog.md
+             kotlin   : '1.7.20', // https://github.com/JetBrains/kotlin/blob/master/ChangeLog.md
 
              ktlint   : '0.45.2', // https://github.com/pinterest/ktlint/releases TODO #20279549
      ]
@@ -10,10 +9,10 @@ buildscript {
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
-    id "com.jfrog.artifactory" version "4.29.2"
+    id 'com.android.application' version '7.4.0' apply false
+    id 'com.android.library' version '7.4.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'com.jfrog.artifactory' version '4.31.0'
 }
 
 ext {
