--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ node_modules
 .DS_STORE
 **/.DS_Store
 .swiftpm/xcode/package.xcworkspace/xcuserdata/andrea.agudo.xcuserdatad/UserInterfaceState.xcuserstate
+.build/
